# term-ai

./: Cargo.toml
.devcontainer/: devcontainer.json
src/: ai.rs  main.rs  terminal.rs  util.rs
src/ai/: model.rs
