[package]
name = "term-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
regex = "1.10.3"
crossterm = { version = "0.27.0", features = ["serde", "event-stream", "use-dev-tty", "filedescriptor"] }
